--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.material_version = "1.0.0"
-    ext.nav_version = "2.2.0-beta01"
+    ext.nav_version = "2.2.0-rc01"
     ext.lifecycle_version = "2.1.0"
     ext.moshi_version = "1.8.0"
+    ext.lottieVersion = "3.1.0"
 
     repositories {
         google()
