--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,12 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+
+    //Image Crop
+    implementation 'com.github.yalantis:ucrop:2.2.4'
+
+    //Permissions
+    implementation 'com.karumi:dexter:6.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
