--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/android,androidstudio
-# Edit at https://www.gitignore.io/?templates=android,androidstudio
+# Created by https://www.gitignore.io/api/java,sonar,kotlin,android,androidstudio
+# Edit at https://www.gitignore.io/?templates=java,sonar,kotlin,android,androidstudio
 
 ### Android ###
 # Built application files
@@ -94,6 +94,46 @@ output.json
 # with Android Studio 3.5.
 .cxx/
 
+### Java ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Kotlin ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+
+# Mobile Tools for Java (J2ME)
+
+# Package Files #
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
+### Sonar ###
+#Sonar generated dir
+/.sonar/
+
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
 
@@ -155,7 +195,6 @@ obj/
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
-.idea/codeStyles
 
 # OS-specific files
 .DS_Store
@@ -173,14 +212,10 @@ Thumbs.db
 .settings/
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
-*.war
-*.ear
 
 # virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
-hs_err_pid*
 
 ## Plugin-specific files:
 
@@ -203,4 +238,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.gitignore.io/api/android,androidstudio
+# End of https://www.gitignore.io/api/java,sonar,kotlin,android,androidstudio
