--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+NapoleoN.iml
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
