--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,17 @@ dependencies {
     implementation 'com.github.Ferfalk:SimpleSearchView:0.1.4'
 
     //Socket-io
-    implementation 'com.github.nkzawa:socket.io-client:0.6.0'
+    implementation('io.socket:socket.io-client:0.8.3') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+
+    //RXKotlin & RXAndroid
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+
+    //Pagination
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
