--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         dagger_version = "2.25.2"
         stetho_version = "1.5.1"
         room_version = "2.2.4"
-        glide_version = "4.10.0"
+        glide_version = "4.11.0"
         rxkotlin_version = "2.4.0"
         rxandroid_version = "2.1.1"
         paging_version = "2.1.1"
@@ -22,6 +22,7 @@ buildscript {
         security_version = "1.0.0-alpha02"
         camerax_version = "1.0.0-beta01"
         camerax_view = "1.0.0-alpha08"
+        exo_player_version = "2.10.5"
     }
 
     repositories {
