--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply plugin: 'io.fabric'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -173,6 +175,11 @@ dependencies {
 
     //Image Compressor
     implementation 'id.zelory:compressor:3.0.0'
+
+    //Crashlitycs
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1') {
+        transitive = true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
