--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,6 +194,16 @@ dependencies {
 
     //Firebase Storage
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+
+    // Location
+    implementation "com.google.android.gms:play-services-maps:17.0.0"
+    implementation "com.google.android.gms:play-services-location:17.0.0"
+
+    // Google Places
+    implementation 'com.google.android.libraries.places:places:2.2.0'
+
+    // Google Maps Utils
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
