--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         kotlin_version = '1.3.71'
-        material_version = "1.2.0-alpha05"
-        nav_version = "2.2.1"
+        material_version = "1.2.0-alpha06"
+        nav_version = "2.2.2"
         lifecycle_version = "2.2.0"
         moshi_version = "1.8.0"
         lottieVersion = "3.1.0"
@@ -21,7 +21,9 @@ buildscript {
         biometric_version = "1.0.1"
         security_version = "1.0.0-beta01"
         camerax_version = "1.0.0-beta01"
-        camerax_view = "1.0.0-alpha08"
+        camera_lifecycle_version = "1.0.0-beta03"
+        camera2_version = "1.0.0-beta03"
+        camerax_view = "1.0.0-alpha10"
         exo_player_version = "2.10.5"
         emoji_compat_version = "1.0.0"
     }
