--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyDcAkhqRS4BO-BoKM89HiXuR4ruLr8fj1w" />
 
         <activity
             android:name=".ui.mainActivity.MainActivity"
