--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,13 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.71'
+        kotlin_version = '1.3.72'
         material_version = "1.2.0-alpha06"
         nav_version = "2.2.2"
         lifecycle_version = "2.2.0"
-        moshi_version = "1.8.0"
-        lottieVersion = "3.1.0"
-        version_retrofit = "2.6.2"
+        moshi_version = '1.9.2'
+        lottieVersion = '3.4.0'
+        version_retrofit = '2.8.1'
         version_kotlin_coroutines = "1.1.0"
         version_retrofit_coroutines_adapter = "0.9.2"
         dagger_version = "2.25.2"
@@ -20,7 +20,7 @@ buildscript {
         paging_version = "2.1.2"
         biometric_version = "1.0.1"
         security_version = "1.0.0-beta01"
-        camerax_version = "1.0.0-beta01"
+        camerax_version = '1.0.0-beta03'
         camera_lifecycle_version = "1.0.0-beta03"
         camera2_version = "1.0.0-beta03"
         camerax_view = "1.0.0-alpha10"
