--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        material_version = "1.2.0-alpha06"
+        material_version = "1.2.0-beta01"
         nav_version = "2.2.2"
         lifecycle_version = "2.2.0"
         moshi_version = '1.9.2'
@@ -20,10 +20,10 @@ buildscript {
         paging_version = "2.1.2"
         biometric_version = "1.0.1"
         security_version = "1.0.0-beta01"
-        camerax_version = '1.0.0-beta03'
-        camera_lifecycle_version = "1.0.0-beta03"
-        camera2_version = "1.0.0-beta03"
-        camerax_view = "1.0.0-alpha10"
+        camerax_version = '1.0.0-beta04'
+        camera_lifecycle_version = "1.0.0-beta04"
+        camera2_version = "1.0.0-beta04"
+        camerax_view = "1.0.0-alpha11"
         exo_player_version = "2.10.5"
         emoji_compat_version = "1.0.0"
     }
