--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
         applicationId "com.naposystems.pepito"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 95
+        versionCode 96
 
-        versionName "2.0.0-alpha"
+        versionName "2.0.0-alpha01"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
