--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
             buildConfigField("String", "HOST_URL", "\"dev.napoleon-chat.com\"")
             buildConfigField("String", "STUN_SERVER", "\"stun:stun-dev.napoleon-chat.com:3478\"")
             buildConfigField("String", "TURN_SERVER", "\"turn:turn-dev.napoleon-chat.com:3478\"")
-            buildConfigField("String", "SOCKET_BASE_URL", "\"https://dev.napoleon-chat.com:6001\"")
+            buildConfigField("String", "SOCKET_BASE_URL", "\"https://dev.napoleon-chat.com/broadcasting/auth\"")
             buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
             buildConfigField("boolean", "ENCRYPT_API", "false")
             buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
@@ -243,6 +243,9 @@ dependencies {
 
     // WebRTC
     implementation 'org.webrtc:google-webrtc:1.0.30039'
+
+    //Pusher
+    implementation 'com.pusher:pusher-java-client:2.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
