--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
         applicationId "com.naposystems.pepito"
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 110
+        versionCode 111
 
-        versionName "2.0.0-alpha15"
+        versionName "2.0.0-alpha16"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
@@ -78,6 +78,21 @@ android {
             buildConfigField("boolean", "ENCRYPT_API", "true")
             buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
             buildConfigField("String", "PUSHER_KEY", "\"6a11211af223541f2069\"")
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        pruebaInterna {
+            debuggable false
+            buildConfigField("String", "BASE_URL", "\"https://dev.napoleon-chat.com/api/\"")
+            buildConfigField("String", "HOST_URL", "\"dev.napoleon-chat.com\"")
+            buildConfigField("String", "STUN_SERVER", "\"stun:stun-dev.napoleon-chat.com:3478\"")
+            buildConfigField("String", "TURN_SERVER", "\"turn:turn-dev.napoleon-chat.com:3478\"")
+            buildConfigField("String", "SOCKET_BASE_URL", "\"https://dev.napoleon-chat.com/broadcasting/auth\"")
+            buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
+            buildConfigField("boolean", "ENCRYPT_API", "false")
+            buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
+            buildConfigField("String", "PUSHER_KEY", "\"36880baf488e08473554\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
