--- a/app/build.gradle
+++ b/app/build.gradle
@@ -266,7 +266,7 @@ dependencies {
     implementation 'com.pusher:pusher-java-client:2.2.1'
 
     //Showcase
-    implementation 'com.github.wooplr:Spotlight:1.2.3'
+    implementation project(':Spotlight-library')
 }
 
 apply plugin: 'com.google.gms.google-services'
