NS-1019, NS-1017, NS-1010, NS-1012, NS-1015, NS-1013, NS-1016, NS-1014

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,6 +116,7 @@ android {
 
     dexOptions {
         javaMaxHeapSize "4g"
+        incremental true
     }
 }
 
@@ -269,6 +270,9 @@ dependencies {
 
     //Showcase
     implementation project(':Spotlight-library')
+
+    //Video Compressor
+    implementation 'com.github.AbedElazizShe:LightCompressor:0.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
