--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 119
+        versionCode 2
 
-        versionName "2.0.0-interna06"
+        versionName "1.0.0-interna02"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
@@ -116,6 +116,24 @@ android {
 
     dexOptions {
         javaMaxHeapSize "4g"
+    }
+
+    bundle {
+        language {
+            // Specifies that the app bundle should not support
+            // configuration APKs for language resources. These
+            // resources are instead packaged with each base and
+            // dynamic feature APK.
+            enableSplit = false
+        }
+        density {
+            // This property is set to true by default.
+            enableSplit = true
+        }
+        abi {
+            // This property is set to true by default.
+            enableSplit = true
+        }
     }
 }
 
@@ -272,6 +290,10 @@ dependencies {
 
     //Video Compressor
     implementation project(':videocompressor')
+
+    //Google Billing
+    implementation "com.android.billingclient:billing:$billing_version"
+    implementation "com.android.billingclient:billing-ktx:$billing_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
