--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         camerax_view = "1.0.0-alpha14"
         exo_player_version = "2.10.5"
         emoji_compat_version = "1.1.0"
+        billing_version = "3.0.0"
     }
 
     repositories {
