--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'io.fabric'
 android {
     signingConfigs {
         config {
-            storeFile file('C:\\Users\\peper\\Documents\\pepito.jks')
+            storeFile file('C:\\Users\\android 2\\Documents\\pepito.jks')
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
