--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,9 @@ apply plugin: 'io.fabric'
 android {
     signingConfigs {
         config {
-            storeFile file('C:\\Users\\android 2\\Documents\\pepito.jks')
+//            storeFile file('C:\\Users\\android 2\\Documents\\pepito.jks')
+//            storeFile file('C:\\Users\\android 2\\Documents\\pepito.jks')
+            storeFile file('D:\\Proyectos_NN\\Desarrollo\\Llaves JKS Android\\pepito.jks')
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
@@ -25,9 +27,9 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 2
+        versionCode 4
 
-        versionName "1.0.0-interna02"
+        versionName "1.0.0-interna04"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
