--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     signingConfigs {
         config {
-            storeFile file('C:\\Users\\Android1\\Documents\\pepito.jks')
+            storeFile file('C:\\Users\\android\\Documents\\pepito.jks')
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
@@ -25,9 +25,9 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 4
+        versionCode 9
 
-        versionName "1.0.0-interna04"
+        versionName "1.0.0-interna09"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
@@ -250,11 +250,6 @@ dependencies {
     //Image Compressor
     implementation 'id.zelory:compressor:3.0.0'
 
-    //Crashlitycs
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1') {
-        transitive = true
-    }
-
     //EmojiCompat
     implementation "androidx.emoji:emoji:$emoji_compat_version"
     implementation "androidx.emoji:emoji-appcompat:$emoji_compat_version"
@@ -294,6 +289,12 @@ dependencies {
     //Google Billing
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "com.android.billingclient:billing-ktx:$billing_version"
+
+    // Add the Firebase Crashlytics SDK.
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+
+    // Recommended: Add the Google Analytics SDK.
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
