--- a/build.gradle
+++ b/build.gradle
@@ -33,14 +33,13 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.31.2'
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -52,7 +51,6 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url 'https://s3.amazonaws.com/fabric-artifacts-private/internal-snapshots' }
-        maven { url 'https://maven.fabric.io/public' }
         maven { url "http://giphy.bintray.com/giphy-sdk" }
     }
 }
