--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ buildscript {
         junit_version = "4.12"
         junit_ext_version = "1.1.1"
         espresso_core_version = "3.2.0"
+        groupie_version = "2.9.0"
         //endregion
 
     }
