--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ buildscript {
         junit_ext_version = "1.1.1"
         espresso_core_version = "3.2.0"
         groupie_version = "2.9.0"
+        work_version = "2.5.0"
         //endregion
 
     }
