solve issue in channels for notifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
 
         <service android:name=".service.uploadService.UploadService" />
 
-        <service android:name=".service.multiattachment.MultipleUploadService" />
+        <service android:name=".service.multiattachment.MultipleUploadService"
+            />
 
         <service android:name=".service.download.DownloadAttachmentsService" />
 
